<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DogPark</string>
    <string name="action_settings">Settings</string>
    <string name="title">Profile</string>
    <string name="name">Name:</string>
    <string name="breed">Breed:</string>
    <string name="gender">Gender:</string>
    <string name="photo">Photo:</string>
    <string-array name="breed">
        <item>Labrador</item>
        <item>Collie</item>
        <item>Yorkshire</item>
        <item>Pit bull</item>
        <item>Doberman</item>
        <item>Huskey</item>
        <item>Chow chow</item>
        <item>Bulldog</item>  
        <item>Beagle</item>      
    </string-array>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="description">About me</string>
    <string name="idog">iDog</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="password">Password:</string>
    <string name="rePassword">Re-Password:</string>
    <string name="user_profile">User Profile</string>
    <string name="myNameIs">My name is&#8230;</string>
    <string name="tellMe">Tell me about you&#8230;</string>
    <string name="login">Login</string>
    <string name="user">User:</string>
    <string name="newPet">New Pet</string>
    <string name="map">Map</string>
    <string name="myProfile">My Profile</string>

</resources>
